--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,35 @@
 {
-	"short_name": "React App",
-	"name": "Create React App Sample",
+	"short_name": "qpost",
+	"name": "qpost",
 	"icons": [
 		{
 			"src": "favicon.ico",
-			"sizes": "64x64 32x32 24x24 16x16",
+			"sizes": "16x16",
 			"type": "image/x-icon"
+		},
+		{
+			"src": "favicon-16x16.png",
+			"sizes": "16x16",
+			"type": "image/png"
+		},
+		{
+			"src": "favicon-32x32.png",
+			"sizes": "32x32",
+			"type": "image/png"
+		},
+		{
+			"src": "android-chrome-192x192.png",
+			"sizes": "192x192",
+			"type": "image/png"
+		},
+		{
+			"src": "android-chrome-384x384.png",
+			"sizes": "384x384",
+			"type": "image/png"
 		}
 	],
 	"start_url": "./index.html",
 	"display": "standalone",
-	"theme_color": "#000000",
+	"theme_color": "#007BFF",
 	"background_color": "#ffffff"
 }
