--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"axios": "^0.18.0",
 		"bootstrap": "^4.1.3",
 		"react": "^16.5.0",
+		"react-cookie": "^3.0.4",
 		"react-dom": "^16.5.0",
 		"react-scripts": "1.1.5",
 		"reactstrap": "^6.4.0"
