--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.4",
+		"@fortawesome/free-solid-svg-icons": "^5.3.1",
+		"@fortawesome/react-fontawesome": "^0.1.3",
 		"axios": "^0.18.0",
 		"bootstrap": "^4.1.3",
+		"i": "^0.3.6",
+		"npm": "^6.4.1",
 		"react": "^16.5.0",
 		"react-cookie": "^3.0.4",
 		"react-dom": "^16.5.0",
