--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@fortawesome/react-fontawesome": "^0.1.3",
 		"axios": "^0.18.0",
 		"bootstrap": "^4.1.3",
+		"dateformat": "^3.0.3",
 		"i": "^0.3.6",
 		"npm": "^6.4.1",
 		"react": "^16.5.0",
