--- a/package.json
+++ b/package.json
@@ -1,28 +1,43 @@
 {
-	"name": "qpost-app",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^1.2.4",
-		"@fortawesome/free-solid-svg-icons": "^5.3.1",
-		"@fortawesome/react-fontawesome": "^0.1.3",
-		"axios": "^0.18.0",
-		"bootstrap": "^4.1.3",
-		"dateformat": "^3.0.3",
-		"i": "^0.3.6",
-		"npm": "^6.4.1",
-		"react": "^16.5.0",
-		"react-cookie": "^3.0.4",
-		"react-dom": "^16.5.0",
-		"react-router": "^4.3.1",
-		"react-router-dom": "^4.3.1",
-		"react-scripts": "1.1.5",
-		"reactstrap": "^6.4.0"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject"
-	}
+  "name": "qpost-app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@types/bootstrap": "^4.1.4",
+    "@types/dateformat": "^1.0.1",
+    "@types/enzyme": "^3.1.15",
+    "@types/node": "^10.12.18",
+    "@types/npm": "^2.0.29",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-router": "^4.4.3",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/reactstrap": "^6.4.3",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.2.1",
+    "dateformat": "^3.0.3",
+    "enzyme": "^3.8.0",
+    "i": "^0.3.6",
+    "npm": "^6.5.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.5.0",
+    "tslib": "^1.9.3",
+    "typescript": "^3.2.2"
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "react-addons-test-utils": "^15.6.2",
+    "react-scripts-ts": "^3.1.0",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.2.2"
+  },
+  "scripts": {
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom --verbose",
+    "eject": "react-scripts-ts eject"
+  }
 }
